[package]
name = "MotorStormRPC"
version = "0.2.1"
edition = "2021"

[dependencies]
discord-rich-presence = "0.2"
sysinfo = "0.30"
chrono = "0.4"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
parking_lot = "0.12"
directories = "5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.5"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_UI_Shell"
] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Better optimization (slower compile, smaller binary)
strip = true         # Strip symbols from binary
panic = "abort"      # Smaller binary, no unwinding

